--- a/.host/src/host.jzcarbon/.tmux.conf
+++ b/.host/src/host.jzcarbon/.tmux.conf
@@ -14,9 +14,7 @@ set-option -g status-keys vi
 # Global parameters
 set -g status-bg black
 set -g status-fg cyan
-set-window-option -g window-status-current-attr bright
-set-window-option -g window-status-current-bg black
-set-window-option -g window-status-current-fg magenta
+set -g mode-style bg=brightblack,fg=brightmagenta
 set-option -g set-titles off
 setw -g aggressive-resize off
 setw -g monitor-activity off
