some more improved gpg.conf defaults

--- a/.config/gpg.conf
+++ b/.config/gpg.conf
@@ -90,6 +90,14 @@ personal-digest-preferences SHA512 SHA384 SHA256 SHA224
 # message digest algorithm used when signing a key
 cert-digest-algo SHA512
 
+# string to key (s2k) options.
+s2k-digest-algo SHA512
+s2k-cipher-algo AES256
+
 # This preference list is used for new keys and becomes the default for
 # "setpref" in the edit menu
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
+
+charset utf-8
+
+require-cross-certification
