redshift useful everywhere i've been _except_ gnome

--- a/.config/autostart/redshift.desktop
+++ b/.config/autostart/redshift.desktop
@@ -1,13 +1,13 @@
 [Desktop Entry]
 Comment=Color temperature adjustment tool
 StartupNotify=true
-Exec=redshift-gtk
+Exec=redshift
 Terminal=false
-GenericName=Color temperature adjustment
+GenericName=Redlight shifting color temperature adjustment
 Version=1.0
-Categories=Utility;
+Categories=Utility
 Hidden=false
 Icon=redshift
 Type=Application
 Name=Redshift
-OnlyShowIn=i3
+NotShowIn=GNOME
