--- a/.config/redshift.conf
+++ b/.config/redshift.conf
@@ -42,8 +42,8 @@ adjustment-method=randr
 ; Keep in mind that longitudes west of Greenwich (e.g. the Americas)
 ; are negative numbers.
 [manual]
-lat=40.7053111
-lon=-74.258188
+lat=41.98031865705745
+lon=-87.90907062775713
 
 ; Configuration of the adjustment-method
 ; type 'redshift -m METHOD:help' to see the settings.
@@ -52,5 +52,5 @@ lon=-74.258188
 ; Note that the numbering starts from 0, so this is actually the
 ; second screen. If this option is not specified, Redshift will try
 ; to adjust _all_ screens.
-[randr]
-screen=HDMI2
+;[randr]
+;screen=HDMI2
