noop~ish: make use of urxvtd explicit

--- a/.config/autostart/urxvtd.desktop
+++ b/.config/autostart/urxvtd.desktop
@@ -3,4 +3,6 @@ Comment=RXVT-Unicode terminal daemon
 Name=urxvtd
 Type=Application
 Exec=/usr/bin/urxvtd --opendisplay
+Hidden=false
 X-GNOME-Autostart-enabled=true
+
