even better: not just xfce, but anything other than a desktop covered by this system file

--- a/.config/autostart/sshadd.desktop
+++ b/.config/autostart/sshadd.desktop
@@ -6,4 +6,6 @@ Comment=ssh-add keys to local ssh agent
 Exec=bash -c 'ssh-add .ssh/key.*[^pub]'
 StartupNotify=true
 Terminal=true
-OnlyShowIn=XFCE
+# this should have the values that OnlyShowIn= has for a gnome install's
+#     /etc/xdg/autostart/gnome-keyring-ssh.desktop
+NotShowIn=GNOME;Unity;MATE;
