--- a/.host/src/host.wajinru/borgmatic.service
+++ b/.host/src/host.wajinru/borgmatic.service
@@ -2,7 +2,7 @@
 Description=borgmatic backup
 Wants=network-online.target
 After=network-online.target
-#ConditionACPower=true ; DO NOT SUBMIT
+ConditionACPower=true
 
 [Service]
 Type=oneshot
