--- a/.host/src/host.wajinru/borgmatic.service
+++ b/.host/src/host.wajinru/borgmatic.service
@@ -2,7 +2,9 @@
 Description=borgmatic backup
 Wants=network-online.target
 After=network-online.target
-ConditionACPower=true
+# TODO: put _some_ critical-low-power check in place
+#   https://projects.torsion.org/witten/borgmatic/issues/419
+#ConditionACPower=true
 
 [Service]
 Type=oneshot
