have borgmatic fail if discharging & low level
script referenced is the one added here: github.co/jzacsh/bin commit
c758a802fb4a3f7

for more context, see:
https://projects.torsion.org/witten/borgmatic/issues/419#issuecomment-3410

--- a/.host/src/host.wajinru/borgmatic-config.yaml
+++ b/.host/src/host.wajinru/borgmatic-config.yaml
@@ -325,6 +325,7 @@ consistency:
 # prevent potential shell injection or privilege escalation.
 hooks:
     before_backup:
+        - /home/jzacsh/bin/share/is_power_sufficient 24
         - echo "`date --iso-8601=ns` - Starting backup"
 
     after_backup:
