blanket[1] swap of email to new email address
[1]: corresponds with github.com/jzacsh/bin commit bd27f24e54c77fc

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
   name = Jonathan Zacsh
-  email = jzacsh@gmail.com
+  email = j@zac.sh
   signingkey = 0xDDA2191017339886
 [help]
   autocorrect = 1
