--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [user]
   name = Jonathan Zacsh
   email = j@zac.sh
-  signingkey = 0x897F3D2E5C0A523D
+  signingkey = 0x6DA4194060D602C2
 [help]
   autocorrect = 1
 [alias]
