more quicklink documentation on gpg & one more option

--- a/.config/gpg.conf
+++ b/.config/gpg.conf
@@ -1,3 +1,6 @@
+# https://www.gnupg.org/documentation/manuals/gnupg/GPG-Configuration-Options.html
+# https://github.com/drduh/config/blob/master/gpg.conf
+# https://www.gnupg.org/documentation/manuals/gnupg/GPG-Esoteric-Options.html
 #
 # This is an implementation of the Riseup OpenPGP Best Practices
 # https://help.riseup.net/en/security/message-security/openpgp/best-practices
@@ -101,3 +104,6 @@ default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB
 charset utf-8
 
 require-cross-certification
+
+# Disable caching of passphrase for symmetrical ops
+no-symkey-cache
